# prompt-fab

./: .gitignore  README.md  example.py  pyproject.toml
prompt_fab/: templates.py
